--- a/Sites/index.html
+++ b/Sites/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>Team Got Nothing Unix Page</title>
@@ -8,25 +6,32 @@
 
 </head>
 <body>
-	<div id="nav">
-		<ul>
-			<li id="home"><a href="#">Home</a></li>
-		</ul>
-		<ul>
-			<li id="tutorials"><a href="#">Tutorials</a></li>
-		</ul>
-		<ul>
-			<li id="quizzes"><a href="#">Quizzes</a></li>
-		</ul>
-		<ul>
-			<li id="about"><a href="#">About</a></li>
-		</ul>
-		<ul>
-			<li id="feedback"><a href="#">Feedback/Contact Us</a></li>
-		</ul>
-	</div>
-	<div id="content">
-		<p>Home page</p>
+	<div id="main">
+		<header>
+		<section id="logo">
+			<p>Logo Goes Here</p>
+		</section>
+		<nav>
+			<ul>
+				<li id="home"><a href="#">Home</a></li>
+			</ul>
+			<ul>
+				<li id="tutorials"><a href="#">Tutorials</a></li>
+			</ul>
+			<ul>
+				<li id="quizzes"><a href="#">Quizzes</a></li>
+			</ul>
+			<ul>
+				<li id="about"><a href="#">About</a></li>
+			</ul>
+			<ul>
+				<li id="feedback"><a href="#">Feedback/Contact Us</a></li>
+			</ul>
+		</nav>
+		</header>
+		<div id="content">
+			<p>Home page</p>
+		</div>
 	</div>
 </body>
 </html>
