--- a/Sites/index.html
+++ b/Sites/index.html
@@ -3,6 +3,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>Team Got Nothing Unix Page</title>
 	<link rel="stylesheet" rev="stylesheet" href="assets/css/main.css" type="text/css" />
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
+
 
 </head>
 <body>
@@ -11,12 +13,12 @@
 		<section id="logo">
 			<p>Logo Goes Here</p>
 		</section>
-		<nav>
+		<nav id="mainNav">
 			<ul>
 				<li id="home"><a href="#">Home</a></li>
 			</ul>
 			<ul>
-				<li id="tutorials"><a href="#">Tutorials</a></li>
+				<li id="tutorials"><a href="tutorial.html">Tutorials</a></li>
 			</ul>
 			<ul>
 				<li id="quizzes"><a href="#">Quizzes</a></li>
@@ -29,9 +31,29 @@
 			</ul>
 		</nav>
 		</header>
+		<!-- <div id="side">
+			<nav id="sideNav">
+				<ul>
+				<li id="home"><a href="#">Home</a></li>
+				</ul>
+				<ul>
+					<li id="tutorials"><a href="#">Tutorials</a></li>
+				</ul>
+				<ul>
+					<li id="quizzes"><a href="#">Quizzes</a></li>
+				</ul>
+				<ul>
+					<li id="about"><a href="#">About</a></li>
+				</ul>
+				<ul>
+					<li id="feedback"><a href="#">Feedback/Contact Us</a></li>
+				</ul>
+			</nav>
+		</div> -->
 		<div id="content">
 			<p>Home page</p>
 		</div>
 	</div>
+
 </body>
 </html>
